@@ -1,3 +1,8 @@
+2008-12-23  Simon Kallweit  <simon.kallweit@intefo.ch>
+
+	* src/synth.c: Implemented simulation of proper NOR flash writes.
+	General cleanup.
+
 2008-12-18  Simon Kallweit  <simon.kallweit@intefo.ch>
 
 	* src/synth.c: Fixed error check of mmap call.
